--- a/sobremi.html
+++ b/sobremi.html
@@ -8,22 +8,9 @@
 		<!--link rel="stylesheet" href="estilos.css"-->
     </head>
     <body>
-        <header>
-            <h1>Enrique Barbudo</h1>
-        </header>
-        <nav>
-        </nav>
-        <main>
-            <section>
-                
-            </section>
-            <aside>
-            
-            </aside>
-        </main>
-        <footer>
-            <adress></adress>
-           <small>&copy; Todos los derechos reservados Kique Barbudo</small> 
-        </footer>
+        <ul>
+            <li>Enrique Barbudo</li>
+            <li>Correo electrónico: kiquebarbudo@gmail.com</li>
+        </ul>
     </body>
 </html>
