--- a/sobremi.html
+++ b/sobremi.html
@@ -11,6 +11,7 @@
         <ul>
             <li>Enrique Barbudo</li>
             <li>Correo electrónico: kiquebarbudo@gmail.com</li>
+            <li>Mis hobbies: Pasear, Escuchar Música, Beber Cerveza</li>
         </ul>
     </body>
 </html>
