--- a/sobremi.html
+++ b/sobremi.html
@@ -12,6 +12,7 @@
             <li>Enrique Barbudo</li>
             <li>Correo electrónico: kiquebarbudo@gmail.com</li>
             <li>Mis hobbies: Pasear, Escuchar Música, Beber Cerveza</li>
+            <li><img src="foto cv.jpg" alt="kiquebarbudo"></li>
         </ul>
     </body>
 </html>
